# foundryagent-automation

./: .env.example  .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/agents/: copilot-instructions.md
.github/workflows/: create-agent.yml  deploy.yml  test.yml
.specify/: init-options.json
.specify/memory/: constitution.md
agents/: __init__.py  registry.py
agents/_base/: agent_factory.py  client.py  config.py  run.py
agents/_base/integrations/: github_mcp.py  github_openapi.py
agents/_base/tools/: __init__.py
agents/code_helper/: README.md  config.py  instructions.md
agents/code_helper/integrations/: github_mcp.py  github_openapi.py  knowledge.py
agents/code_helper/tools/: __init__.py  sample_tool.py
agents/doc_assistant/: README.md  config.py  instructions.md
agents/doc_assistant/integrations/: github_mcp.py  github_openapi.py  knowledge.py
agents/doc_assistant/tools/: __init__.py  sample_tool.py
docs/: custom-tools-guide.md  infrastructure-guide.md  mcp-integration-guide.md  openapi-integration-guide.md  scaffolding-guide.md
infra/bicep/: main.bicep
infra/bicep/modules/: ai-search.bicep  foundry-project.bicep  foundry-resource.bicep  keyvault.bicep  rbac-cognitive-user.bicep  rbac-contributor.bicep  rbac-kv-user.bicep
infra/bicep/parameters/: dev.bicepparam  prod.bicepparam  qa.bicepparam
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/envs/: dev.tfvars  prod.tfvars  qa.tfvars
notebooks/: 01_setup_and_connect.ipynb  02_build_and_run_agent.ipynb  03_scaffold_agent.ipynb
scripts/: create_agent.py  delete_agent.py  deploy_agent.py
specs/003-foundry-agent-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-foundry-agent-platform/checklists/: requirements.md
specs/003-foundry-agent-platform/contracts/: agent-factory.md  agent-registry.md  cicd-pipeline.md  deploy-script.md
specs/004-agent-scaffolding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-agent-scaffolding/contracts/: cli-create-agent.md  documentation.md  gha-create-agent.md
specs/005-migrate-to-new-foundry/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-migrate-to-new-foundry/contracts/: agent-factory.md  client.md  run.md  tools.md
tests/: conftest.py
tests/_base/: test_agent_factory.py  test_client.py  test_config.py  test_run.py
tests/code_helper/: conftest.py  test_agent_create.py  test_agent_run.py  test_tools.py
tests/doc_assistant/: conftest.py  test_agent_create.py  test_agent_run.py  test_tools.py
tests/scaffolding/: test_create_agent.py  test_delete_agent.py
