[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundryagent-automation"
version = "0.1.0"
description = "Multi-agent platform for Azure AI Foundry Agent Service"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "azure-ai-projects>=1.0.0b1",
    "azure-ai-agents>=1.0.0",
    "azure-identity>=1.15.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live Azure credentials (deselect with '-m \"not integration\"')",
    "code_helper: marks tests for the code-helper agent",
    "doc_assistant: marks tests for the doc-assistant agent",
    "scaffolding: marks tests for the agent scaffolding script",
]
asyncio_mode = "auto"
